--- a/.github/workflows/3-publish-release.yml
+++ b/.github/workflows/3-publish-release.yml
@@ -2,7 +2,8 @@ name: Release on main (PR + GitHub Release)
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 permissions:
   contents: write
@@ -28,7 +29,7 @@ jobs:
         with:
           release-type: go
           token: ${{ secrets.GH_RELEASE_TOKEN }}
-          target-branch: main
+          target-branch: ${{ github.ref_name }}
 
   build_and_upload:
     name: Build e upload de binários (após release criada)
