--- a/deploy/helm/chatcli/templates/deployment.yaml
+++ b/deploy/helm/chatcli/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          command: ["chatcli", "serve"]
+          command: ["chatcli", "server"]
           args:
             - "--port={{ .Values.server.port }}"
             {{- if .Values.server.metricsPort }}
